--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <script src="https://apis.google.com/js/api.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
